# atomic-kernel-v1

./: .gitignore  ARCHITECTURE.md  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.obsidian/: workspace.json
artifacts/: artifact-lifecycle-v0.normalized.json  artifact-lifecycle-v0.replay-hash  capability-kernel-virtual-graph.mermaid.md  capability-kernel-virtual-graph.normalized.json  capability-kernel-virtual-graph.projection.json  capability-kernel-virtual-graph.replay-hash  mcp-capability-benchmark.normalized.json  mcp-capability-benchmark.replay-hash  mcp-future-message-demo.normalized.json  mcp-future-message-demo.replay-hash  mcp-unified-smoke.normalized.json  mcp-unified-smoke.replay-hash  mcp-unified-stdio-smoke.normalized.json  mcp-unified-stdio-smoke.replay-hash  message-to-future.v0.json  message-to-future.v0.sha256  metaverse-future-scope-smoke.normalized.json  metaverse-future-scope-smoke.replay-hash  source-capability-parity.normalized.json  source-capability-parity.replay-hash  universe-a14-incidence-scheduling.normalized.json  universe-a14-incidence-scheduling.replay-hash  universe-a5-fano.normalized.json  universe-a5-fano.replay-hash  universe-v0-proof-slice.normalized.json  universe-v0-proof-slice.replay-hash  workspace-snapshot-v0.bundle  workspace-snapshot-v0.normalized.json  workspace-snapshot-v0.replay-hash  workspace-snapshot-v0.restore.normalized.json  workspace-snapshot-v0.restore.replay-hash  world-v0.branch-reconcile.fixture.json  world-v0.branch-reconcile.normalized.json  world-v0.branch-reconcile.replay-hash  (+14 more)
(+3033 files in other folders)
