[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-kernel"
version = "0.1.0"
description = "Deterministic atomic kernel with replay-locked conformance gates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Public Domain" }
authors = [{ name = "Atomic Kernel Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["atomic_kernel*", "runtime.atomic_kernel*"]
